# biomed

./: .dockerignore  .gitignore  .sample.env  Dockerfile  Makefile  main.py  pyproject.toml
bot/: aiogram_start.py  answer_texts.py  create_bot.py
bot/filters/: has_read_privacy_policy.py  has_registered.py
bot/forms/: upload_document.py  user_form.py
bot/handlers/: edit_docuents.py  list_documents.py  start.py
bot/keyboards/: all_kb.py  back_to_main_menu.py  edit_docuemnts_kb.py  kb_sex.py  list_documents_kb.py  register_kb.py
bot/s3/: init.py
bot/utils/: utils.py
bot/validators/: validators.py
migrations/: env.py
migrations/versions/: 1c5e0b7af0a9_initial.py  28762abd8877_tokens.py  2af9baffefbc_edit_note.py  326d97aae262_triggers_y_history.py  7bdb3959db59_updates.py
mocks/: documents.py
sql/: create_analysis_triggers.sql  log_analysis_history.sql
src/: database.py  models.py  schemas.py  settings.py
src/bot/: aiogram_start.py  answer_texts.py  create_bot.py
src/bot/db/: __init__.py  db_handlers.py  dto.py
src/bot/filters/: has_read_privacy_policy.py  has_registered.py  is_admin.py  is_any_analyses_not_ready.py  is_operator.py  operator_has_taken_analyses.py
src/bot/forms/: process_document.py  upload_document.py  user_form.py  utils.py
src/bot/handlers/: create_token.py  edit_docuents.py  list_documents.py  logout_operator.py  start.py  (+1 more)
src/dependencies/: db.py
src/repositories/: analysis.py  base.py  operator.py  statistics.py  tag.py  token.py  user.py
src/s3/: __init__.py  client.py
src/tasks/: revoke_expired_analyses.py
(+17 files in other folders)
